# low-latency-trading-system

./: .gitignore  CMakeLists.txt  README.md  exchangeMain.cpp  main.cpp
include/common/: common.hpp
include/common/constants/: constants.hpp
include/common/data_structures/: ClientRequestLFQueue.hpp  ClientResponseLFQueue.hpp  LFQueue.hpp  MarketUpdateLFQueue.hpp  MemoryPool.hpp
include/common/enums/: ClientRequestType.hpp  ClientResponseType.hpp  MarketUpdateType.hpp
include/common/logging/: LogElement.hpp  LogType.hpp  Logger.hpp  constants.hpp
include/common/messages/: ClientRequest.hpp  ClientResponse.hpp  MDPMarketUpdate.hpp  MarketUpdate.hpp  OMClientRequest.hpp  OMClientResponse.hpp
include/common/network/: McastSocket.hpp  TCPServer.hpp  TCPSocket.hpp  network.hpp
include/common/performance/: performanceUtils.hpp
include/common/threading/: threading.hpp
include/common/time/: time.hpp
include/common/types/: OrderTypes.hpp  types.hpp
include/exchange/common/: ClientRequestLFQueue.hpp  ClientResponseLFQueue.hpp  MarketUpdateLFQueue.hpp
include/exchange/market_data/: MarketDataPublisher.hpp  SnapshotSynthesizer.hpp
include/exchange/matching_engine/: ClientOrderHashMap.hpp  MatchingEngine.hpp  Order.hpp  OrderBook.hpp  OrderBookHashMap.hpp  OrderHashMap.hpp  OrdersAtPrice.hpp  OrdersAtPriceHashMap.hpp
include/exchange/order_server/: FIFOSequencer.hpp  OrderServer.hpp
include/exchange/shared/: ClientRequestLFQueue.hpp  ClientResponseLFQueue.hpp  MDPMarketUpdateLFQueue.hpp  MarketUpdateLFQueue.hpp
include/memory/: MemoryPool.hpp
include/threading/: thread_utils.hpp
include/trading/market_data/: MarketDataConsumer.hpp
include/trading/order_gateway/: OrderGateway.hpp
include/trading/strategy/: AlgoType.hpp  BBO.hpp  FeatureEngine.hpp  LiquidityTaker.hpp  MarketMaker.hpp  MarketOrder.hpp  MarketOrderBook.hpp  MarketOrderBookHashMap.hpp  MarketOrdersAtPrice.hpp  OrderHashMap.hpp  (+6 more)
include/utils/: LFQueue.hpp  time.hpp  utils.hpp
scripts/: build.sh  run_clients.sh  run_exchange_and_clients.sh
src/exchange/: exchangeMain.cpp
src/trading/: tradingMain.cpp
src/utils/: utils.cpp
(+66 files in other folders)
